--- a/services/relay/Dockerfile
+++ b/services/relay/Dockerfile
@@ -1,9 +1,14 @@
 FROM node:20-alpine
 
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN if [ -f package-lock.json ]; then npm ci --omit=dev; else npm i --omit=dev; fi
+
+# Fuerza reinstalación cuando cambies el número
+ARG CACHE_BUST=1
+
+COPY package.json ./
+RUN npm install --omit=dev --no-audit --no-fund
 
 COPY . .
+
 ENV NODE_ENV=production
 CMD ["node", "src/index.js"]
