--- a/services/gateway/package.json
+++ b/services/gateway/package.json
@@ -2,7 +2,9 @@
   "name": "gateway",
   "private": true,
   "type": "module",
-  "engines": { "node": ">=20" },
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "node src/server.js",
     "start": "node src/server.js"
@@ -12,6 +14,7 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "mongodb": "^6.21.0"
   }
 }
