--- a/services/gateway/package.json
+++ b/services/gateway/package.json
@@ -2,9 +2,7 @@
   "name": "gateway",
   "private": true,
   "type": "module",
-  "engines": {
-    "node": ">=20"
-  },
+  "engines": { "node": ">=20" },
   "scripts": {
     "dev": "node src/server.js",
     "start": "node src/server.js"
@@ -13,8 +11,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "mongodb": "^6.11.0",
     "morgan": "^1.10.0",
-    "zod": "^3.23.8",
-    "mongodb": "^6.21.0"
+    "zod": "^3.23.8"
   }
 }
