--- a/services/gateway/Dockerfile
+++ b/services/gateway/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-alpine
 
-# IMPORTANT (Render Docker): builds often run with repo root as build context.
-# This Dockerfile is written to work with build context = "." (repo root).
+# IMPORTANT (Render Docker): build context is repo root (.) in our Render setup.
+# We COPY only the files we need so we never overwrite node_modules.
 
 WORKDIR /app
 
@@ -9,8 +9,10 @@ WORKDIR /app
 COPY services/gateway/package.json services/gateway/package-lock.json* ./
 RUN if [ -f package-lock.json ]; then npm ci --omit=dev; else npm i --omit=dev; fi
 
-# Copy only gateway sources + shared packages it imports
-COPY services/gateway ./
+# Copy gateway runtime sources (do NOT copy the whole directory to avoid clobbering node_modules)
+COPY services/gateway/src ./src
+
+# Shared packages (manifest, etc.)
 COPY packages ./packages
 
 ENV NODE_ENV=production
