--- a/services/gateway/Dockerfile
+++ b/services/gateway/Dockerfile
@@ -1,19 +1,25 @@
-FROM node:20-alpine
-
-# Render setup (per-service Docker build context):
-# - Root Directory: services/gateway
-# - Dockerfile Path: services/gateway/Dockerfile
-# - Docker Build Context Directory: services/gateway
+FROM node:20-slim
 
 WORKDIR /app
 
-# Install production deps for the gateway service
-COPY package.json package-lock.json* ./
-# NOTE: Render Docker builds may hit an npm bug with `npm ci` ("Exit handler never called!").
-# Use `npm install` for a robust production install.
-RUN npm install --omit=dev --no-audit --no-fund
+ENV NPM_CONFIG_UPDATE_NOTIFIER=false \
+    NPM_CONFIG_FUND=false \
+    NPM_CONFIG_AUDIT=false \
+    NPM_CONFIG_PROGRESS=false
 
-# Copy runtime sources (do not copy node_modules)
+RUN npm -v && npm install -g npm@10.9.2
+
+# Install production deps for the gateway service (Render build context = services/gateway)
+COPY package.json package-lock.json* ./
+
+RUN set -eux; \
+  for i in 1 2 3; do \
+    npm ci --omit=dev --no-audit --no-fund && break; \
+    echo "npm ci failed (attempt $i/3)"; \
+    npm cache clean --force || true; \
+    sleep 3; \
+  done
+
 COPY src ./src
 
 ENV NODE_ENV=production
