--- a/services/gateway/Dockerfile
+++ b/services/gateway/Dockerfile
@@ -7,21 +7,17 @@ ENV NPM_CONFIG_UPDATE_NOTIFIER=false \
     NPM_CONFIG_AUDIT=false \
     NPM_CONFIG_PROGRESS=false
 
-RUN npm -v && npm install -g npm@10.9.2
+RUN npm -v && npm install -g npm@11.10.1
 
-# Install production deps for the gateway service (Render build context = services/gateway)
 COPY package.json package-lock.json* ./
 
 RUN set -eux; \
-  for i in 1 2 3; do \
-    npm ci --omit=dev --no-audit --no-fund && break; \
-    echo "npm ci failed (attempt $i/3)"; \
-    npm cache clean --force || true; \
-    sleep 3; \
-  done
+  npm config set fetch-retries 5; \
+  npm config set fetch-retry-mintimeout 20000; \
+  npm config set fetch-retry-maxtimeout 120000; \
+  npm ci --omit=dev --no-audit --no-fund
 
 COPY src ./src
 
 ENV NODE_ENV=production
-EXPOSE 3000
 CMD ["node", "src/server.js"]
