--- a/services/relay/Dockerfile
+++ b/services/relay/Dockerfile
@@ -8,20 +8,18 @@ ENV NPM_CONFIG_UPDATE_NOTIFIER=false \
     NPM_CONFIG_AUDIT=false \
     NPM_CONFIG_PROGRESS=false
 
-# Pin npm to a stable version (avoids sporadic "Exit handler never called!" issues)
-RUN npm -v && npm install -g npm@10.9.2
+# Use a newer npm (11.x) which is more stable on Render builds than the 10.8.x bundled in images.
+# IMPORTANT: If dependency install fails, the Docker build MUST fail (prevents missing node_modules at runtime).
+RUN npm -v && npm install -g npm@11.10.1
 
 # Install production deps for the relay service (Render build context = services/relay)
 COPY package.json package-lock.json* ./
 
-# Retry to handle transient registry/network hiccups
 RUN set -eux; \
-  for i in 1 2 3; do \
-    npm ci --omit=dev --no-audit --no-fund && break; \
-    echo "npm ci failed (attempt $i/3)"; \
-    npm cache clean --force || true; \
-    sleep 3; \
-  done
+  npm config set fetch-retries 5; \
+  npm config set fetch-retry-mintimeout 20000; \
+  npm config set fetch-retry-maxtimeout 120000; \
+  npm ci --omit=dev --no-audit --no-fund
 
 # Copy runtime sources (never copy node_modules)
 COPY src ./src
