--- a/services/gateway/Dockerfile
+++ b/services/gateway/Dockerfile
@@ -2,6 +2,8 @@ FROM node:20-slim
 
 WORKDIR /app
 
+# See services/relay/Dockerfile for rationale: avoid npm during image build.
+
 ENV NODE_ENV=production
 
 RUN corepack enable && corepack prepare yarn@1.22.22 --activate
