--- a/services/gateway/Dockerfile
+++ b/services/gateway/Dockerfile
@@ -2,14 +2,11 @@ FROM node:20-slim
 
 WORKDIR /app
 
-# See services/relay/Dockerfile for rationale: avoid npm during image build.
-
 ENV NODE_ENV=production
 
-RUN corepack enable && corepack prepare yarn@1.22.22 --activate
-
-COPY package.json ./
-RUN yarn install --production --non-interactive --network-timeout 600000
+# Deterministic installs for Render (use package-lock.json)
+COPY package.json package-lock.json ./
+RUN npm ci --omit=dev --no-audit --no-fund
 
 COPY src ./src
 
