--- a/services/gateway/Dockerfile
+++ b/services/gateway/Dockerfile
@@ -4,9 +4,10 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
-# Deterministic installs on Render using the lockfile.
+# Deterministic, production-only install (Render-safe)
 COPY package.json package-lock.json ./
-RUN npm ci --omit=dev --no-audit --no-fund
+RUN npm ci --omit=dev --no-audit --no-fund \
+  && node --input-type=module -e "import('express'); import('helmet'); import('morgan'); console.log('deps ok')"
 
 COPY src ./src
 
