--- a/services/gateway/Dockerfile
+++ b/services/gateway/Dockerfile
@@ -1,12 +1,21 @@
-# syntax=docker/dockerfile:1
+# Render-optimized, deterministic, and resilient install
+# - Uses npm ci with package-lock.json
+# - Upgrades npm to avoid known npm 10.x intermittent "Exit handler never called!" failures
+# - Multi-stage to keep runtime image small
 
 FROM node:20-slim AS deps
 WORKDIR /app
+ENV NODE_ENV=production \
+    npm_config_update_notifier=false \
+    npm_config_audit=false \
+    npm_config_fund=false
 
-# Deterministic, cache-friendly install
+# Upgrade npm (Render often ships older npm in base image)
+RUN npm i -g npm@11.10.1 --no-audit --no-fund
+
 COPY package.json package-lock.json ./
 RUN npm ci --omit=dev --no-audit --no-fund \
-  && node -e "import('express').then(()=>process.exit(0)).catch(()=>process.exit(1))"
+  && node -e "import('express').then(()=>process.exit(0)).catch((e)=>{console.error(e);process.exit(1)})"
 
 FROM node:20-slim AS runner
 WORKDIR /app
