--- a/services/relay/package.json
+++ b/services/relay/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
+    "googleapis": "^140.0.1",
     "undici": "^6.19.8",
     "zod": "^3.23.8",
-    "mongodb": "^6.21.0"
+    "mongodb": "^6.21.0",
+    "tesseract.js": "^5.1.0"
   }
 }
